K8s/platforms.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1, # number of services that run
  selector: # selector and template work hand in hand // selector selecting the template as part of Deployment
    matchLabels:
      app: platformservice
  template: # defining pod and contianer we use
    metadata:
      labels:
        app: platformservice
    spec:
      contianers: # in yaml, a dash denotes an array
        - name: platformservice
          image: adamfoxdocker/platformservice:latest
