K8s/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1 # number of services that run
  selector: # selector and template work hand in hand // selector selecting the template as part of Deployment
    matchLabels:
      app: platformservice
  template: # defining pod and contianer we use
    metadata:
      labels:
        app: platformservice
    spec:
      containers: # in yaml, a dash denotes an array
        - name: platformservice
          image: adamfoxdocker/platformservice:latest
---
# The above line seperates the deployment from the Cluster IP Config (fun fact: havin gcomment on that line breaks it as its not recognised)
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
    - name: platformgrpc
      protocol: TCP
      port: 666
      targetPort: 666
